2004-10-27    <jaris@ifi.uio.no>

	* client: On 'T' key, retrive 250 peers from tracker.

	* library: Added tracker numwant and key.

2004-10-02  Jari Petter Sundell  <jaris@student.matnat.uio.no>

	* torrent: New class for selecting the chunks to download.

	* client: File priority added.

2004-09-25  Jari Petter Sundell  <jaris@student.matnat.uio.no>

	* client: View files in torrent and their size. Will be used for priority later.

2004-09-19  Jari Petter Sundell  <jaris@student.matnat.uio.no>

	* all: Forgotten to update this file for a while. Lot's of stuff happen with the code. ;)

	* client: Added resume of torrents and snubbing.

2004-08-23  Jari Petter Sundell  <jaris@student.matnat.uio.no>

	* torrent/data: Wrote new and cleaner files to chunk abstraction. Much prettier.

2004-08-14    <jaris@ifi.uio.no>

	* torrent/tracker: New tracker request code. Modular using sigc++
	and ready for extension.

	* torrent: Moved over to using libcurl for http downloads.

2004-08-07    <jaris@ifi.uio.no>

	* configure: Added sigc++-2.0 to dependencies.

	* torrent/url: Shiny new http interface with sigc++ signals.

2004-08-05    <jaris@ifi.uio.no>

	* client: Added support for http urls.

	* delegator: Fixed a bug that caused us to request pieces the peer
	didn't have. (DOH!)

2004-08-04    <jaris@ifi.uio.no>

	* bitfield: Clean up bitfield class and opimized .notIn().

	* torrent: Finished http class, testing remains.

2004-08-03      <jaris@ifi.uio.no>

	* torrent: Don't throw on zero length piece messages. Why do they
	send these?

2004-07-28    <jaris@ifi.uio.no>

	* torrent: Fixed a few bugs in the throttle and added min chunk
	size.

2004-07-25    <jaris@ifi.uio.no>

	* torrent: Fixed bug that made it skip sending the stop message to
	the tracker when quiting.

	* torrent: Changed stdint.h to inttypes.h and made it easy to
	disable execinfo.h in client.

	* torrent: Added throttle with tree structure. Bandwidth
	delegation needs work.
